@@ -8,7 +8,7 @@
 # Copyright (c) 2008 Andreas Kupries <andreas_kupries@users.sourceforge.net>
 # All rights reserved.
 #
-# RCS: @(#) $Id: XOpsControl,v 1.2 2008/11/07 03:47:33 andreas_kupries Exp $
+# RCS: @(#) $Id: XOpsControl,v 1.3 2008/11/08 06:43:18 andreas_kupries Exp $
 
 # -------------------------------------------------------------------------
 
@@ -21,5 +21,6 @@ source ${SELF}/XOpsSetup
 
 source ${SELF}/ops/adjmatrix.test ; # Adjacency matrix
 source ${SELF}/ops/kruskal.test   ; # Minimum spanning tree/forest by Kruskal
+source ${SELF}/ops/prim.test      ; # Minimum spanning tree/forest by Prim
 
 # -------------------------------------------------------------------------
