@@ -4,7 +4,7 @@
 # Copyright (c) 2008 Andreas Kupries <andreas_kupries@users.sourceforge.net>
 # All rights reserved.
 #
-# RCS: @(#) $Id: XOpsSetup,v 1.2 2008/11/07 03:47:33 andreas_kupries Exp $
+# RCS: @(#) $Id: XOpsSetup,v 1.3 2008/11/08 06:43:18 andreas_kupries Exp $
 
 # -------------------------------------------------------------------------
 
@@ -12,6 +12,8 @@
 
 
 proc SETUP_A {} {
+    # Used by kruskal, prim tests
+
     graph mygraph
     mygraph node insert 'node0'
     mygraph node insert 'node1'
@@ -74,4 +76,46 @@ proc SETUP_A2 {} {
 }
 
 # -------------------------------------------------------------------------
+
+proc SETUP_B {} {
+    # Predefined Graph for testing on:
+    # - isConnected?
+    # - connectedComponents
+    # - prim
+    # - isEulerian?
+    # Author: Alejandro Eduardo Cruz Paz
+    # 28 August 2008
+
+    graph mygraph
+    # Graph's nodes definition
+    mygraph node insert S
+    mygraph node insert A
+    mygraph node insert B
+    mygraph node insert C
+    mygraph node insert D
+    mygraph node insert E
+        
+    # setup arcs and it's weights
+    mygraph arc insert S A S_A ;	mygraph arc setweight S_A 3
+    mygraph arc insert A C A_C ;	mygraph arc setweight A_C 2
+    mygraph arc insert S B S_B ;	mygraph arc setweight S_B 1
+    mygraph arc insert A B A_B ;	mygraph arc setweight A_B 1
+    mygraph arc insert B C B_C ;	mygraph arc setweight B_C 3
+    mygraph arc insert B D B_D ;	mygraph arc setweight B_D 5
+    mygraph arc insert C D C_D ;	mygraph arc setweight C_D 1
+    mygraph arc insert D E D_E ;	mygraph arc setweight D_E 1
+    mygraph arc insert C E C_E ;	mygraph arc setweight C_E 3
+
+    # S --/3/--> A --/2/--> C --/3/--> E
+    #  \         |        /^|        /-^
+    #   \        -       /  -       /
+    #    -|1|    1  -|3|-   1  -|1|-
+    #        \   - /        - /
+    #         \  V/         V/
+    #          > B --/5/--> D
+    #
+
+    return
+}
+
 # -------------------------------------------------------------------------
