@@ -67,6 +67,26 @@ A note regarding the result, the command refrains from explicitly
 listing the nodes of the MST as this information is implicitly
 provided in the arcs already.
 
+
+
+[call [cmd struct::graph:op::prim] [arg g]]
+
+This command takes the graph [arg g] and returns a list containing the
+names of the arcs in [arg g] which span up a minimum spanning tree
+(MST), or, in the case of an un-connected graph, a minimum spanning
+forest. Prim's algorithm is used to compute the tree or forest.
+
+[para]
+
+The command will throw an error if one or more arcs in [arg g] have no
+weight associated with them.
+
+[para]
+
+A note regarding the result, the command refrains from explicitly
+listing the nodes of the MST as this information is implicitly
+provided in the arcs already.
+
 [list_end]
 
 
@@ -75,6 +95,7 @@ provided in the arcs already.
 [list_begin enum]
 [enum] [uri http://en.wikipedia.org/wiki/Adjacency_matrix      {Adjacency matrix}]
 [enum] [uri http://en.wikipedia.org/wiki/Kruskal%27s_algorithm {Kruskal's algorithm}]
+[enum] [uri http://en.wikipedia.org/wiki/Prim%27s_algorithm    {Prim's algorithm}]
 [list_end]
 
 
