@@ -1,3 +1,12 @@
+2008-11-07  Andreas Kupries <andreas_kupries@users.sourceforge.net>
+
+	* graphops.tcl: Continued integration of graph algorithms.
+	* graphops.man: Minimum spanning tree/forest as per Prim.
+	* graph/tests/ops/prim.test: Bumped version to 0.2
+	* graph/tests/XOpsControl:
+	* graph/tests/XOpsSetup:
+	* pkgIndex.tcl:
+
 2008-11-06  Andreas Kupries <andreas_kupries@users.sourceforge.net>
 
 	* graphops.tcl: Continued integration of graph algorithms.
